# alano-rought-cut-ai

./: .gitignore  AGENTS.md  CHANGELOG.md  HARNESS_IMPROVEMENT_REPORT.md  LICENSE  README.md  SKILL.md  install.md  install.ps1  pyproject.toml
.agents/: README.md
.agents/archetypes/: documentary_narrative.md  educational_explainer.md  event_recap.md  interview.md  podcast_excerpt.md  product_demo.md  sales_vsl.md  social_talking_head.md  testimonial_case_study.md  tutorial.md
.agents/core/: context_policy.md  invariants.md  workflow.md
.agents/prompts/: editor_subagent.md
.agents/state/: run_state.template.md
.agents/steps/: 01_inventory.md  02_transcription.md  03_pack_transcripts.md  04_brief_inference.md  05_editorial_strategy.md  06_edl_generation.md  07_runtime_revision.md  08_preview_qc.md  09_xml_export.md  10_persist_memory.md
helpers/: edl_to_fcpxml.py  fcpxml_to_edl.py  pack_transcripts.py  preview_transcript_qc.py  render.py  timeline_view.py  transcribe.py  transcribe_batch.py  validate_edl_boundaries.py
